--- a/src/headings.html
+++ b/src/headings.html
@@ -5,13 +5,13 @@
     <title>Headings</title>
 </head>
 <body>
-<h1> This is heading #1!</h1>
-<h2> I am smalled than heading #1!</h2>
-<h2> I am even smaller</h2>
-<h3>I am the third and smallest header so far</h3>
-<h4> When does it end?</h4>
-<h5> Very small here</h5>
-<h6> final header! so tiny!</h6>
+
+<h1><span title = "h1 header"> This is heading #1!</span></h1>
+<h2><span title = "h2 header">I am smalled than heading #1!</span></h2>
+<h3><span title = "h3 header">I am the third and smallest header so far</span></h3>
+<h4><span title = "h4 header"> When does it end?</span></h4>
+<h5><span title = "h5 header"> Very small here</span></h5>
+<h6><span title = "h6 header"> final header! so tiny!</span></h6>
 
 </body>
 </html>
