--- a/src/headings.html
+++ b/src/headings.html
@@ -7,11 +7,17 @@
 <body>
 
 <h1><span title = "h1 header"> This is heading #1!</span></h1>
-<h2><span title = "h2 header">I am smalled than heading #1!</span></h2>
+<img src="https://a-z-animals.com/media/2021/01/mammals-400x300.jpg" width="800" height ="600">
+<h2><span title = "h2 header">I am smaller than heading #1!</span></h2>
+<img src="https://a-z-animals.com/media/2021/01/Wild-Chameleon-Reptile-With-Beautiful-Colors-400x300.jpg" width="600" height="450">
 <h3><span title = "h3 header">I am the third and smallest header so far</span></h3>
+<img src="https://a-z-animals.com/media/2021/01/Betta-fish-siamese-fighting-fish-400x300.jpg">
 <h4><span title = "h4 header"> When does it end?</span></h4>
+<img src="https://a-z-animals.com/media/2021/01/spring-colored-birds-flirting-400x300.jpg" width="266" height="200">
 <h5><span title = "h5 header"> Very small here</span></h5>
+<img src="https://a-z-animals.com/media/2021/01/Golden-eyed-leaf-frog-400x300.jpg" width="200" height="150">
 <h6><span title = "h6 header"> final header! so tiny!</span></h6>
+<img src="https://a-z-animals.com/media/2021/01/Jellyfish-with-neon-glow-light-effect-in-sea-aquarium-in-Sentosa-Singapore-400x300.jpg" width="160" height="120">
 
 </body>
 </html>
